--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BinaryTree C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(BinaryTree main.c)
+add_executable(BinaryTree main.c queue.h queue.c)
